# site-api

./: .env.example  .gitignore  main.py  pyproject.toml
auth/: database.py  manager.py  schemas.py  vk_auth.py
migrations/: env.py
migrations/versions/: 00de4db629e4_.py  029e8eefb647_.py  1624b3068b06_.py  1e4b6110f48a_.py  256144e49bef_.py  2acf39965e6f_.py  32cf185c52cf_.py  364beec6fb07_.py  3fa5bcb6979a_.py  47df2db1cffe_.py  4ca24181ca7c_.py  62cffaab5796_.py  67117a3b4a27_.py  89b0c90945e8_.py  a218dea79391_add_fastapi_users.py  ab28d1bd1b32_.py  b5d3c0deb9c6_.py  bbaa436e24f5_.py  d02d1b913d42_.py  de9ac78f031d_.py  e9c43186345f_.py  f222867cf37f_.py  fc6110cf7783_.py  fd221e5e0c66_создание_таблицы_user.py
src/: config.py  database.py  main.py  models.py
src/auth/: models.py  schemas.py  service.py  utils.py  views.py  vk_auth.py
src/meetings/: crud.py  models.py  schemas.py  service.py  views.py
src/sports/: crud.py  models.py  schemas.py  views.py
src/travels/: crud.py  models.py  views.py
src/users/: models.py  schemas.py  service.py  utils.py  views.py
